--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@measured/puck": "^0.16.2",
+    "@module-federation/error-codes": "^0.8.4",
+    "@module-federation/sdk": "^0.8.4",
     "@module-federation/vite": "^1.1.9",
     "@remix-run/css-bundle": "^2.2.0",
     "@remix-run/node": "^2.2.0",
